saves/test/demo_full_20240802_193545/vector2/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp vector2_tb.v vector2.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
vector2_tb.v:80: $finish called at 12000 (1ps)

iverilog cmd 2 error:

